# CoreWar

./: CMakeLists.txt  Makefile  a.out  asm  authour  file1  test.c  test_file
Corewar...бу/: Makefile  corewar
Corewar...бу/corewar.dSYM/Contents/Resources/DWARF/: corewar
Corewar...бу/inc/: op.h
Corewar...бу/src/: arena.c  corewar.c  errors.c  get_next_line.c  gets.c  input_players.c  operations.c  operations_code_1.c  unsigned.c  validation.c  validation_2.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
asm.dSYM/Contents/Resources/DWARF/: asm
asmsrc/: CMakeLists.txt  ErrorOut.c  add_node.c  add_token.c  arg_reader.c  asm.c  bad_line.c  champ_code.c  compare_val.c  disassembler.c  error.c  error_out.c  errors.c  fill_magic_header.c  ft_charjoin.c  ft_join_char_free.c  ft_strtrim_free.c  get_next_line.c  main.c  op.c  parse.c  process_instr.c  read_and_write.c  right_arg.c  right_arg2.c  s_compiler.c  second_part_parse.c  take_tokens.c  third_arg.c  tools.c  tools2.c  who_is_who.c  write_anything.c  write_arg.c  write_args.c
corewar/Corewar_Dima/: Makefile  corewar  my_test_Machine.txt  ol_test.txt  testikkk
corewar/Corewar_Dima/corewar.dSYM/Contents/Resources/DWARF/: corewar
corewar/Corewar_Dima/inc/: op.h
corewar/Corewar_Dima/src/: corewar.c  create.c  disasm.c  ft_show.c  lets_go_war.c  op.c  operations.c  operations_code_1.c  operations_code_2.c  operations_code_3.c  operations_code_4.c  tools.c  tools2.c  tools3.c
corewar/Corewar_Dima/vm_champs/champs/: 42.cor  42.s  42_primer.cor
corewar/Corewar_Irakli/: Makefile
corewar/Corewar_Irakli/asmsrc/: asm.c  champ_code.c  error_out.c  op.c  process_instr.c  right_arg.c  who_is_who.c
corewar/Corewar_Irakli/diffs/: affOrig  surMy
corewar/Corewar_Irakli/inc/: asm.h  op.h
corewar/Corewar_Olya/: CMakeLists.txt  Car.s  Makefile  champ.s  s  testik
corewar/Corewar_Olya/corewar.dSYM/Contents/Resources/DWARF/: corewar
corewar/Corewar_Olya/inc/: op.h
corewar/Corewar_Olya/src/: arena.c  corewar.c  create.c  disasm.c  errors.c  lets_go_war.c  op.c  operations.c  operations_code_1.c  operations_code_2.c  operations_code_3.c  operations_code_4.c  tools.c  tools2.c  tools3.c  unsigned.c
corewar/Corewar_Olya/vm_champs/: test_Machine.txt
corewar/Corewar_Olya/vm_champs/champs/: bee_gees.s
corewar/corewar_final/asm/src/: arg_reader.c  bad_line.c  op.c  parse.c
corewar/corewar_final/inc/: asm.h
corewar/corewar_final/vm/src/: arena.c  corewar.c  create.c  disasm.c  errors.c  ft_show.c  input_players.c  lets_go_war.c  op.c  operations.c  operations_code_1.c  operations_code_2.c  operations_code_3.c  operations_code_4.c  tools.c  tools2.c  tools3.c  validation.c  validation_2.c
corewar/test_in_school/: errors.txt  script_check_full.sh  test
inc/: asm.h  cmd_op.h  op.h
libft/includes/: libft.h
libft/sources/: ft_isspace.c
mar.cor/: 42.cor  42.s  bee_gees.cor  test.cor  test.s  zork.cor  zork.s
tests/: Makefile  out1
tests/corewar-project/: anton222.txt
tests/tests/vm/champ/: Asombra.out1  Douceur_power.out1  Explosive_Kitty.out1  Gagnant.out1  Kappa.out1  Kittystrophic.out1  MarineKing.out1  Misaka_Mikoto.out1  Misaka_Mikoto.out2  Octobre_Rouge_V4.2.out1  Rainbow_dash.out1  Rainbow_dash.out2  THUNDER.out1  Varimathras.out1  Wall.out1  _honeybadger.out1  big_feet.out1  bigzork.out1  casimir.out1  casimir.out2  champ.out1  corelol.out1  darksasuke.out1  doge.out1  fluttershy.out1  gateau.out1  gedeon.out1  helltrain.out1  jinx.out1  jumper.out1  justin_bee.out1  loose.out1  maxidef.out1  meowluigi.out1  mortel.out1  mortel.out2  overwatch.out1  run_Kitty_RUN.out1  salamahenagalabadoun.out1  sam_2.0.out1  (+10 more)
vm_champs/champs/: 42.cor  Car.cor  barriere.cor  toto.cor
vm_champs/champs/examples/: turtle.cor
