cmake_minimum_required(VERSION 3.15)
project(CoreWar C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft/includes)

add_executable(CoreWar
        asmsrc/add_node.c
        asmsrc/arg_reader.c
        asmsrc/asm.c
        asmsrc/fill_magic_header.c
        asmsrc/get_next_line.c
        asmsrc/parse.c
        asmsrc/read_and_write.c
        asmsrc/s_compiler.c
        asmsrc/take_tokens.c
        asmsrc/tools.c
        inc/asm.h
        inc/cmd_op.h
        inc/op.h
        libft/includes/libft.h
        libft/sources/ft_atoi.c
        libft/sources/ft_atoi_base.c
        libft/sources/ft_atol.c
        libft/sources/ft_bzero.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_isspace.c
        libft/sources/ft_itoa.c
        libft/sources/ft_join_free.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        asmsrc/add_token.c
        asmsrc/champ_code.c
        asmsrc/write_arg.c asmsrc/third_arg.c asmsrc/disassembler.c)
