cmake_minimum_required(VERSION 3.15)
project(Corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(ft_printf)

add_executable(Corewar
        inc/op.h
        ft_printf/ft_do_w_float.c
        ft_printf/ft_do_w_ldouble.c
        ft_printf/ft_int.c
        ft_printf/ft_int_parser.c
        ft_printf/ft_pars_float.c
        ft_printf/ft_pars_float2.c
        ft_printf/ft_point_and_friends.c
        ft_printf/ft_printf.c
        ft_printf/ft_printf_and_all_all_all.c
        ft_printf/ft_string_and_char.c
        ft_printf/ft_tools_float.c
        ft_printf/ft_uns_parser.c
        ft_printf/unsigned.c
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_double.c
        ft_printf/libft/ft_first_free_join.c
        ft_printf/libft/ft_free_strdup.c
        ft_printf/libft/ft_free_sub.c
        ft_printf/libft/ft_intinput.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_len_digit.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_modul.c
        ft_printf/libft/ft_modul_int.c
        ft_printf/libft/ft_modul_int_change.c
        ft_printf/libft/ft_not_prob.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_second_free_join.c
        ft_printf/libft/ft_split_free.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/ft_vhod_elem.c
        ft_printf/libft/ft_while_digit.c
        ft_printf/libft/ft_while_digit_plus.c
        ft_printf/libft/ft_while_isprint.c
        ft_printf/libft/libft.h
        src/arena.c
        src/corewar.c
        src/errors.c
        src/input_players.c
        src/lets_go_war.c
        src/operations.c
        src/operations_code_1.c
        src/operations_code_2.c
        src/operations_code_3.c
        src/operations_code_4.c
        src/tools.c
        src/validation.c
        src/validation_2.c)
